--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,14 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
           "browsers": "> 5%",
           "node": "4.1.1"
         },
-        "debug": true
+        "debug": true,
+        "useBuiltIns": "usage"
       }
     ]
   ]
