--- a/package.json
+++ b/package.json
@@ -2,35 +2,41 @@
   "name": "mam.client.js",
   "private": false,
   "version": "0.0.1",
-  "main": "lib/library.js",
+  "main": "lib/mam.js",
   "scripts": {
-    "web": "webpack --progress --colors --watch",
-    "node": "webpack --progress --colors --watch --env node",
-    "build":
-      "webpack --progress --colors --env node && webpack --progress --colors",
-    "test":
-      "mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
-    "test:watch":
-      "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
+    "web": "webpack --progress --colors --mode production --env web",
+    "node": "webpack --progress --colors --mode production --env node",
+    "build": "webpack --progress --colors --mode development --env node",
+    "test": "yarn run build && ava-ts"
+  },
+  "ava": {
+    "files": [
+      "tests/**/*.ts"
+    ],
+    "verbose": true
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "iota.crypto.js": "iotaledger/iota.crypto.js",
-    "iota.lib.js": "^0.4.2",
-    "pify": "^3.0.0",
-    "rust-wasm-loader": "^0.1.2"
+    "@iota/converter": "^1.0.0-beta.6",
+    "@iota/core": "^1.0.0-beta.6",
+    "@iota/curl": "^1.0.0-beta.6",
+    "@iota/http-client": "^1.0.0-beta.6"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.0.1",
-    "babel-loader": "7.1.2",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-preset-env": "1.6.1",
-    "chai": "4.1.2",
-    "mocha": "4.0.1",
-    "rust-emscripten-loader": "^0.0.1",
-    "webpack": "3.7.1",
-    "yargs": "7.1.0"
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@types/webassembly-js-api": "^0.0.2",
+    "arraybuffer-loader": "^1.0.7",
+    "ava": "^0.25.0",
+    "ava-ts": "^0.25.2",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "8.0.4",
+    "babel-plugin-add-module-exports": "1.0.0",
+    "declaration-bundler-webpack-plugin": "https://github.com/th0br0/declaration-bundler-webpack-plugin.git",
+    "ts-loader": "^5.3.1",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "yargs": "^12.0.2"
   }
 }
